ETPKIM-1176 fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "cognitive/сarray",
+  "name": "cognitive/carray",
   "description": "Library for working with arrays",
   "type": "library",
   "homepage": "http://www.cognitive.ru/",
